hide overflow on benefits section to avoid horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,7 @@ body {
 
 #benefits {
     margin-bottom: 150px;
+    overflow: hidden;
 }
 
 #benefits-left {
